--- a/fruits.html
+++ b/fruits.html
@@ -347,6 +347,36 @@
           </div>
           <button class="addd">Add to cart</button>
         </div>
+        <div class="duct2">
+          <h5>special offer</h5>
+          <div class="mango">
+            <p>
+              50% <br />
+              <span>Discount</span>
+            </p>
+            <img
+              src="https://img.freepik.com/free-vector/set-vegetables-white-background_1308-105493.jpg?ga=GA1.1.755936900.1733217768&semt=ais_hybrid"
+              class="mangg"
+              alt="mango"
+            />
+          </div>
+          <h5>on vegetables and fruits</h5>
+        </div>
+        <div class="duct3">
+          <h5>special offer</h5>
+          <div class="mango">
+            <p>
+              50% <br />
+              <span>Discount</span>
+            </p>
+            <img
+              src="https://img.freepik.com/premium-vector/basket-full-fresh-vegetables_259139-106.jpg?ga=GA1.1.755936900.1733217768&semt=ais_hybrid"
+              class="mangg"
+              alt="mango"
+            />
+          </div>
+          <h5>Dairy</h5>
+        </div>
       </div>
     </section>
   </body>
