--- a/fruits.html
+++ b/fruits.html
@@ -11,6 +11,24 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="iddd">
+        <img src="lovely2.png" class="lovely" alt="canva" />
+        <p>
+          welcome <br />
+          <span>Mrs.Margret</span>
+        </p>
+      </div>
+      <div class="iddda">
+        <i class="bx bx-bell"></i>
+        <i class="bx bxs-comment-detail"></i>
+        <i class="bx bx-cart-download"></i>
+      </div>
+    </nav>
+    <form action="">
+      <span><i class="bx bx-search"></i></span
+      ><input type="text" placeholder="search" />
+    </form>
     <section>
       <div class="pro">
         <p>Popular</p>
@@ -18,13 +36,14 @@
       </div>
       <div class="duct">
         <div class="duct1">
-          <div class="mango">
-            <img
-              src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
-              class="mang"
-              alt="mango"
-            />
-          </div>
+          <a href="cart.html"
+            ><div class="mango">
+              <img
+                src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
+                class="mang"
+                alt="mango"
+              /></div
+          ></a>
           <div class="mango1">
             <p>
               Refreh Farm <span><i class="bx bxs-check-circle"></i></span>
