--- a/product.html
+++ b/product.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>product</title>
     <link rel="stylesheet" href="pro.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <nav>
+      <div class="iddd">
+        <img src="lovely2.png" class="lovely" alt="canva" />
+        <p>
+          welcome <br />
+          <span>Mrs.Margret</span>
+        </p>
+      </div>
+      <div class="iddda">
+        <i class="bx bx-bell"></i>
+        <i class="bx bxs-comment-detail"></i>
+        <i class="bx bx-cart-download"></i>
+      </div>
+    </nav>
+    <form action="">
+      <span><i class="bx bx-search"></i></span
+      ><input type="text" placeholder="search" />
+    </form>
     <section>
       <a href="index.html"><h2>category</h2></a>
       <div class="detail">
