--- a/fruits.html
+++ b/fruits.html
@@ -368,7 +368,7 @@
         </div>
       </div>
     </section>
-    <div class="offer">
+    <!-- <div class="offer">
       <div class="duct2">
         <h5>special offer</h5>
         <div class="mango">
@@ -399,6 +399,6 @@
         </div>
         <h5>Dairy</h5>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
