--- a/fruits.html
+++ b/fruits.html
@@ -366,6 +366,171 @@
           </div>
           <button class="addd">Add to cart</button>
         </div>
+        <div class="duct1">
+          <div class="mango">
+            <img
+              src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
+              class="mang"
+              alt="mango"
+            />
+          </div>
+          <div class="mango1">
+            <p>
+              Refreh Farm <span><i class="bx bxs-check-circle"></i></span>
+            </p>
+          </div>
+          <h5>Organic mango</h5>
+          <div class="star">
+            <div class="star1">
+              <span>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i
+              ></span>
+              <p>[500]</p>
+            </div>
+            <div class="star2">$200</div>
+          </div>
+          <div class="stock">
+            <p>instock</p>
+            <p>&400</p>
+          </div>
+          <button class="addd">Add to cart</button>
+        </div>
+        <div class="duct1">
+          <div class="mango">
+            <img
+              src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
+              class="mang"
+              alt="mango"
+            />
+          </div>
+          <div class="mango1">
+            <p>
+              Refreh Farm <span><i class="bx bxs-check-circle"></i></span>
+            </p>
+          </div>
+          <h5>Organic mango</h5>
+          <div class="star">
+            <div class="star1">
+              <span>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i
+              ></span>
+              <p>[500]</p>
+            </div>
+            <div class="star2">$200</div>
+          </div>
+          <div class="stock">
+            <p>instock</p>
+            <p>&400</p>
+          </div>
+          <button class="addd">Add to cart</button>
+        </div>
+        <div class="duct1">
+          <div class="mango">
+            <img
+              src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
+              class="mang"
+              alt="mango"
+            />
+          </div>
+          <div class="mango1">
+            <p>
+              Refreh Farm <span><i class="bx bxs-check-circle"></i></span>
+            </p>
+          </div>
+          <h5>Organic mango</h5>
+          <div class="star">
+            <div class="star1">
+              <span>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i
+              ></span>
+              <p>[500]</p>
+            </div>
+            <div class="star2">$200</div>
+          </div>
+          <div class="stock">
+            <p>instock</p>
+            <p>&400</p>
+          </div>
+          <button class="addd">Add to cart</button>
+        </div>
+        <div class="duct1">
+          <div class="mango">
+            <img
+              src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
+              class="mang"
+              alt="mango"
+            />
+          </div>
+          <div class="mango1">
+            <p>
+              Refreh Farm <span><i class="bx bxs-check-circle"></i></span>
+            </p>
+          </div>
+          <h5>Organic mango</h5>
+          <div class="star">
+            <div class="star1">
+              <span>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i
+              ></span>
+              <p>[500]</p>
+            </div>
+            <div class="star2">$200</div>
+          </div>
+          <div class="stock">
+            <p>instock</p>
+            <p>&400</p>
+          </div>
+          <button class="addd">Add to cart</button>
+        </div>
+        <div class="duct1">
+          <div class="mango">
+            <img
+              src="https://img.freepik.com/premium-vector/3d-illustration-mango-fruit_317396-1266.jpg?ga=GA1.1.755936900.1733217768"
+              class="mang"
+              alt="mango"
+            />
+          </div>
+          <div class="mango1">
+            <p>
+              Refreh Farm <span><i class="bx bxs-check-circle"></i></span>
+            </p>
+          </div>
+          <h5>Organic mango</h5>
+          <div class="star">
+            <div class="star1">
+              <span>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i>
+                <i class="bx bx-star"></i
+              ></span>
+              <p>[500]</p>
+            </div>
+            <div class="star2">$200</div>
+          </div>
+          <div class="stock">
+            <p>instock</p>
+            <p>&400</p>
+          </div>
+          <button class="addd">Add to cart</button>
+        </div>
       </div>
     </section>
     <!-- <div class="offer">
